--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-  background:pink;
+  background-image:url(image/img.jpg);
+  
 }
 img{
   height: 150px;
@@ -15,6 +16,7 @@ h1{
   top:25%;
   left:50%;
   transform: translateX(-50%) translateY(-50%);
+  color:white;
 }
 p{
   font-family: arial;
@@ -22,4 +24,9 @@ p{
   top:30%;
   left:50%;
   transform: translateX(-50%) translateY(-50%);
+  color:white;
+}
+.img{
+  top:37%;
+  color:white;
 }
